time/assets/css/main.css
* {
  box-sizing: border-box;
}


/* Start here */

body {
  background-color: whitesmoke;
  font-family: palatino;
}



div img {
  max-height: 300px;
  align-items: baseline;
  margin-right: 5%;
  max-width: 300px;

}
.margin{
  margin: 17%;
}

.time {
  font-size: 80px;
  text-align: center;
  text-transform: uppercase;
  font-family: arial;
  margin-bottom: 80px;
}

.imageSwap{
  margin: auto;
  width: 600px;
}

.imageSwap img {
  max-width: 100%;
}

.messageSwap {
  margin: auto;
  width: 600px;
  font-family: courier;
  font-size: 18px;
  margin-bottom: 100px;
}
.left{
  justify-content: left;
  padding-right: 10%;
  text-align:left;

}
.right {
  justify-content: right;
  padding-left: 10%;
  text-align: right;
}
.textQuote{
  text-align: center;
  font-size: 15pt;
  font-weight: bold;
  margin-left: 25%;
  margin-right: 25%;
}
.textHeading{

}
.textTitle {
  font-size: 50pt;
}


.textCaption {
  margin: 5%;
  font-size: 12pt;
  font-style: italic;

}
.textImage {
  margin: 5%;
}
.imgAlign{
  display: inline-block;
  margin: 1%;

}

